--- a/Desktop/sample-codes/front-end/src/App.css
+++ b/Desktop/sample-codes/front-end/src/App.css
@@ -86,12 +86,53 @@ body {
 	text-decoration: none;
 
 }
+.main-content {
+  position: fixed;
+  margin-left: 20%;
+  margin-top: 3%;
+  width: 80%;
+}
+.main-content .title {
+	background-color: #eef1f7;
+	border-bottom: 1px solid #b8bec9;
+	padding: 10px 20px;
+	font-weight: 700;
+	color: #333;
+	font-size: 18px;
+}
+.main {
+	display: flex;
+	flex-flow: row wrap;
+}
+.widget {
+	flex-basis: 300px;
+	flex-grow: 10;
+	height: 350px;
+	margin: 15px;
+	border-radius: 6px;
+	background-color: #ffffff;
+	position: relative;
+}
+.widget .title {
+	background-color: #eef1f7;
+	border-bottom: 1px solid #dfe4ec;
+	padding: 10px;
+	border-top-left-radius: 6px;
+	border-top-right-radius: 6px;
+	color: #617085;
+	font-weight: 600;
+}
 footer{
     position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    color: #35475e;
-    text-align: center;
+		width: 100%;
+		height: 6%;
+		bottom: 0;
+		background-color: #2d3d51;
+		color: white;
+		text-align: center;
+	  	padding-left: 9%;
+}
+.gallery{
+	margin: 2% 1%;
 }
 
